--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
     crossorigin="anonymous">
@@ -14,34 +14,48 @@
 </head>
 <body>
     <header>
-        <div class="header header-fluid" id="head">
-            <div class="container">
-              <h1 class="display-4" id="title">Weather Dashboard</h1>
+        <div id="head">
+            <div>
+              <h1 id="name">Weather Dashboard</h1>
             </div>
         </div>
     </header>
 
-    <main class="maincontainer">
+    <main class="container">
+         <div class="col-sm-12 col-md-3 left-panel order-md-1" id="searchHist">
+                <form class="searchForm m-1 p-1">
+                    <h3 for="city-input" class="m-1 p-1">Search for a City</h3>
+                    <input class="city" class="form-control" id="cityInput" placeholder="Search for your city">
+                    <button id="searchbtn" class="btn btn-primary">Search <i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button id="clearbtn" class="btn btn-primary">Clear</button>
+                </form>
+                <div class="searchHistContainer m-1 p-1">
+                    <h3>Recent Searches:</h3>
+                    <div class="list-group">
+                        <div class="searchHistory list-group"></div>
+                        <div id="currentContainer"></div>
+                    </div>
+                 </div>
+                </div>
         <div class="row">
             <div class="col-sm-12 col-md-9 order-md-2 p-1">
-         
-                <div class="col-12 p-0" id="currentWeatherContainer">
-                    <div class="d-flex p-1" id="cityDate">
+            <div id="currentWeather">
+                    <div id="areaDate">
                         <h2 id="city"></h2>
                         <h2 id="date"></h2>
-                        <img id="weatherIcon"/>
+                        <img id="Icon"/>
                     </div>
                     <div class="p-2">
-                        <p>Temperature: <span id="currentTemp"></span> &#186;F</p>
-                        <p>Feels Like: <span id="currentFeels"></span> &#186;F</p>
-                        <p>Humidity: <span id="currentHumidity"></span> </p>
-                        <p>Wind: <span id="currentWind"></span> MPH</p>
+                        <p>Temperature: <span id="temperature"></span> &#186;F</p>
+                        <p>Feels Like: <span id="feels"></span> &#186;F</p>
+                        <p>Humidity: <span id="humidity"></span> </p>
+                        <p>Wind: <span id="windy"></span> MPH</p>
                     </div>
                 </div>
                 <div class="col-12 fiveDayCast" id="fiveDayCastContainer">
                     <h2>5 Day Forecast</h2>
                     <div class="row">
-                        <div class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div >
                             <div class="card day-0 m-0 text-center">
                                 <div class="card-body p-1">
                                     <h4 class="card-title">Day 1</h4>
@@ -98,21 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-3 left-panel order-md-1" id="searchHist">
-                <form class="searchForm m-1 p-1">
-                    <h3 for="city-input" class="m-1 p-1">Search for a City</h3>
-                    <input class="city" class="form-control" id="cityInput" placeholder="Search for your city">
-                    <button id="searchbtn" class="btn btn-primary">Search <i class="fa-solid fa-magnifying-glass"></i></button>
-                    <button id="clearbtn" class="btn btn-primary">Clear</button>
-                </form>
-                <div class="searchHistContainer m-1 p-1">
-                    <h3>Recent Searches:</h3>
-                    <div class="list-group">
-                        <div class="searchHistory list-group"></div>
-                        <div id="currentContainer"></div>
-                    </div>
-                 </div>
-                </div>
+           
         </div>
         </main>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
