--- a/index.html
+++ b/index.html
@@ -1,122 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
-    crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/a784449657.js" 
-    crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Weather Dashboard</title>
-</head>
+  </head>
+
+
 <body>
-    <header>
-        <div id="head">
-            <div>
-              <h1 id="name">Weather Dashboard</h1>
-            </div>
+    <header
+    class="container-fluid text-center text-white bg-dark p-2 weather-header"
+  >
+    <h1>Weather Dashboard</h1>
+  </header>
+  
+    <div class="row">
+        <aside class="col-lg-3 pb-3">
+            <h2 id="form-heading" class="mt-1 h3 form-label">
+              Search for a City:
+            </h2>
+
+            <input class="ms-2 w-100 form-control" type="text" id="search-city" placeholder="Enter city"
+                aria-label="Server" />
+       
+                <form id="search-form" class="form">
+                    <div class="form-inline form-group">
+                      <div class="input-group">
+                        <div
+                  class="form-input weather-search"
+                  type="text"
+                  id="search-input" 
+                  aria-controls="today forecast">
+                </div>
+            <button
+            class="mt-2 p-2 ms-2 w-100 btn btn-primary" type="button" id="search-btn" aria-label="submit search">
+                    Search
+                  </button>
+            <hr />
+
         </div>
-    </header>
+    </div>
+  </div>
+</form>
 
-    <main class="container">
-         <div class="col-sm-12 col-md-3 left-panel order-md-1" id="searchHist">
-                <form class="searchForm m-1 p-1">
-                    <h3 for="city-input" class="m-1 p-1">Search for a City</h3>
-                    <input class="city" class="form-control" id="cityInput" placeholder="Search for your city">
-                    <button id="searchbtn" class="btn btn-primary">Search <i class="fa-solid fa-magnifying-glass"></i></button>
-                    <button id="clearbtn" class="btn btn-primary">Clear</button>
-                </form>
-                <div class="searchHistContainer m-1 p-1">
-                    <h3>Recent Searches:</h3>
-                    <div class="list-group">
-                        <div class="searchHistory list-group"></div>
-                        <div id="currentContainer"></div>
-                    </div>
-                 </div>
-                </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-9 order-md-2 p-1">
-            <div id="currentWeather">
-                    <div id="areaDate">
-                        <h2 id="city"></h2>
-                        <h2 id="date"></h2>
-                        <img id="Icon"/>
-                    </div>
-                    <div class="p-2">
-                        <p>Temperature: <span id="temperature"></span> &#186;F</p>
-                        <p>Feels Like: <span id="feels"></span> &#186;F</p>
-                        <p>Humidity: <span id="humidity"></span> </p>
-                        <p>Wind: <span id="windy"></span> MPH</p>
-                    </div>
-                </div>
-                <div class="col-12 fiveDayCast" id="fiveDayCastContainer">
-                    <h2>5 Day Forecast</h2>
-                    <div class="row">
-                        <div >
-                            <div class="card day-0 m-0 text-center">
-                                <div class="card-body p-1">
-                                    <h4 class="card-title">Day 1</h4>
-                                    <img class="fiveDayCast-img mb-2" />
-                                    <p> Temp: <span class="fiveDayCast-temp"></span> &#186;F</p>
-                                    <p> Feels Like: <span class="fiveDayCast-feels"></span> &#186;F</p>
-                                </div>
-                            </div>
+<div class="col-lg-9 pb-3">
+    <section
+      id="today"
+      class="mt-3"
+      role="region"
+      aria-live="polite"
+    ></section>
+    <section
+      id="forecast"
+      class="row mt-3"
+      role="region"
+      aria-live="polite"
+    ></section>
+  </div>
+</div>
+</div>
 
-                        </div>
-                        <div class="col-sm-10 col-md-4 col-lg-2 p-1 text-center">
-                            <div class="card day-1 m-0">
-                                <div class="card-body p-1">
-                                    <h4 class="card-title">Day 2</h4>
-                                    <img class="fiveDayCast-img mb-2" />
-                                    <p> Temp: <span class="fiveDayCast-temp"></span> &#186;F</p>
-                                    <p> Feels Like: <span class="fiveDayCast-feels"></span> &#186;F</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-sm-10 col-md-4 col-lg-2 p-1 text-center">
-                            <div class="card day-2 m-0">
-                                <div class="card-body p-1">
-                                    <h4 class="card-title">Day 3</h4>
-                                    <img class="fiveDayCast-img mb-2" />
-                                    <p> Temp: <span class="fiveDayCast-temp"></span> &#186;F</p>
-                                    <p> Feels Like: <span class="fiveDayCast-feels"></span> &#186;F</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-sm-10 col-md-4 col-lg-2 p-1 text-center">
-                            <div class="card day-3 m-0">
-                                <div class="card-body p-1">
-                                    <h4 class="card-title">Day 4</h4>
-                                    <img class="fiveDayCast-img mb-2" />
-                                    <p> Temp: <span class="fiveDayCast-temp"></span> &#186;F</p>
-                                    <p> Feels Like: <span class="fiveDayCast-feels"></span> &#186;F</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-sm-10 col-md-4 col-lg-2 p-1 text-center">
-                            <div class="card day-4 m-0">
-                                <div class="card-body p-1">
-                                    <h4 class="card-title">Day 5</h4>
-                                    <img class="fiveDayCast-img mb-2" />
-                                    <p> Temp: <span class="fiveDayCast-temp"></span> &#186;F</p>
-                                    <p> Feels Like: <span class="fiveDayCast-feels"></span> &#186;F</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-           
+            <p>Search History</p>
+            <div type="button" id="search-history" class="mt-2 p-2 w-100 btn btn-primary"></div>
         </div>
-        </main>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <script src="./assets/script.js"></script>
-    </body>
-    </html>
+        <div class="col-sm-9">
+            <div class="p-5 mb-4 bg-light rounded-3">
+                <div id="currentWeather" class="contatiner-fluid py-1">
+                    <h3 id="title"></h3>
+                </div>
+
+            </div>
+            <h4>Daily Forecast</h4>
+            <div id="fiveDay" class="row"></div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" 
+            crossorigin="anonymous"></script>
+    <script src="./assets/script.js"></script>
+</body>
+
+</html>
